2006-02-19  Jan Schmidt  <thaytan@mad.scientist.com>

	* HACKING:
	Mention ffmpeg snapshot update

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_caps_to_codecid), (gst_ffmpeg_get_codecid_longname):
	Add new codec types from FFMpeg snapshot update to 2006-02-17 4:00 GMT

2006-02-17  Wim Taymans  <wim@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_sink_activate):
	Post nice error message when we cannot activate in pull mode.

2006-02-14  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_open):
	If the duration returned by ffmpeg is 0, it doesn't mean the file has
	no duration, but that it doesn't know the end.
	Fixed accordingly for segment_stop.

2006-02-13  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_release_buffer),
	(gst_ffmpegdec_frame):
	More fixes for keyframe detection in ffmpeg decoders...

2006-02-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_caps_to_pixfmt):
	* ext/ffmpeg/gstffmpegenc.c: (gst_ffmpegenc_getcaps):
	  respect pixel-aspect-ratio when encoding.

2006-02-12  Edward Hervey  <edward@fluendo.com>

	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_init),
	(gst_ffmpegdemux_close), (gst_ffmpegdemux_handle_seek),
	(gst_ffmpegdemux_add), (my_safe_copy), (gst_ffmpegdemux_read_tags),
	(gst_ffmpegdemux_open), (gst_ffmpegdemux_loop):
	Add Tag support and keyframe seeking (for those formats where ffmpeg
	actually fills in the index).
	* ext/ffmpeg/gstffmpegprotocol.c: (gst_ffmpegdata_peek),
	(gst_ffmpegdata_read), (gst_ffmpegdata_seek):
	Add support for size querying.

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* ext/ffmpeg/gstffmpeg.c:
	  set correct version on the plug-in - the GStreamer
	  FFMpeg version.  I could swear I had already done this
	  before.

2006-02-11  Thomas Vander Stichele  <thomas at apestaart dot org>
