@@ -1,5 +1,11 @@
 2006-02-19  Jan Schmidt  <thaytan@mad.scientist.com>
 
+	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
+	(gst_ffmpeg_caps_to_codecid), (gst_ffmpeg_get_codecid_longname):
+	Add codec mapping for RealAudio G2 (Cook) codec.
+
+2006-02-19  Jan Schmidt  <thaytan@mad.scientist.com>
+
 	* HACKING:
 	Mention ffmpeg snapshot update
 
